[package]
name = "oozle"
version = "0.1.3"
edition = "2021"
authors = ["Youn Mélois <youn@melois.dev>"]
repository = "https://github.com/sehnryr/oozle"
homepage = "https://github.com/sehnryr/oozle"
description = "Open source Kraken, Mermaid, Selkie, Leviathan, LZNA, Bitknit decompressor"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cxx = "1.0"
log = "0.4"

[build-dependencies]
cxx-build = "1.0"
